--- a/.gitignore
+++ b/.gitignore
@@ -48,19 +48,19 @@ Vagrantfile
 #-------------------------
 # Temporary Files
 #-------------------------
-writable/cache/*
-!writable/cache/index.html
+website/writable/cache/*
+!website/writable/cache/index.html
 
-writable/logs/*
-!writable/logs/index.html
+website/writable/logs/*
+!website/writable/logs/index.html
 
-writable/session/*
-!writable/session/index.html
+website/writable/session/*
+!website/writable/session/index.html
 
-writable/uploads/*
-!writable/uploads/index.html
+website/writable/uploads/*
+!website/writable/uploads/index.html
 
-writable/debugbar/*
+website/writable/debugbar/*
 
 php_errors.log
 
